     - Removed the `add.deploy_template`, `add.revert_template`, and
	     `add.verify_template` configuration settings. They have been deprecated
	     with warnings in favor of the `add.templates` configuration section
       since v0.990.
     - Formally the `@FIRST` and `@LAST` symbolic tags, which have been
       deprecated with warnings since 0.997.

     [API Changes]
     - Added the URI-overriding parameters `user`, `host`, `port`, and
       `dbname` to App::Sqitch::Target so that command options can be used
       to easily set them.
     - Added support for passing attribute parameters to the `all_targets`
       group constructor on App::Sqitch::Target, so that command-line options
       can be used to assign attributes to all targets read from the
       configuration.
     - Aded the `target_params` method to App::Sqitch::Command and updated all
       commands to use it when constructing targets. This allows commands to
       easily add options for parameters to be passed to the Target
       constructors, as required for the options unification documented above.
     - Added the `class_for` method to App::Sqitch::Command so that the new
       options parser described above can load a command class without
       instantiating an instance. Useful for searching command-line arguments
       for a command name.
     - Added the `create` constructor to App::Sqitch::Command to let Sqitch
       instantiate an instance of a command with arguments once it finds one
       via `class_for`.
     - Added the ConnectingCommand role to abstract handling command options
       for connecting to a database.
     - Added the ContextCommand role to abstract handling command options for
       the location of the plan file and top directory. This is also where
       use of the deprecated form of `--top-dir` triggers a warning.
     - Removed the `verbosity` attribute from App::Sqitch::Command::engine